Fixes to letter spacing, margin-top, and padding.

--- a/wanted-poster/css/style.css
+++ b/wanted-poster/css/style.css
@@ -69,7 +69,7 @@ h2 {
     text-transform: uppercase;
     font-size:3rem;
     margin: 0;
-    letter-spacing:.25rem;
+    letter-spacing:0.25rem;
     color: darkred;
     text-shadow:.09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
@@ -81,7 +81,7 @@ h3 {
     text-transform: uppercase;
     font-size:2rem;
     margin: 0;
-    letter-spacing: .5rem;
+    letter-spacing:0.5rem;
     color:#000;
     font-family:'Alfa Slab One', Garamond, serif;
     text-align:center;
@@ -92,7 +92,7 @@ h4 {
     text-transform: uppercase;
     font-size:1.5rem;
     margin: 0;
-    letter-spacing:.25rem;
+    letter-spacing:0.25rem;
     color:darkred;
     text-shadow: .09375rem .09375rem .09375rem #000;
     font-family:'Alfa Slab One', Garamond, serif;
@@ -111,15 +111,15 @@ h5 {
     text-align:center;
     font-weight: 400;
     background-color: #333;
-    margin-top:.25rem;
-    padding:.5rem;
+    margin-top:0.25rem;
+    padding:0.5rem;
 }
 
 
 /* Section & Paragraph */
 
 section {
-    margin-top:.5rem;
+    margin-top:0.5rem;
 }
 
 p {
@@ -145,7 +145,7 @@ figure {
 }
 
 figcaption {
-    padding-top:.5rem;
+    padding-top:0.5rem;
     text-align: right;
 }
 
